# NER_test

./: .gitignore  OPORD 290-24 OPERATION STRIKE FURY.txt  README.md  agent.py  chunker.py  config.py  docker-compose.yaml  dockerfile  extract_text.py  extractor.py  models.py  pyproject.toml  sample_opord.txt  storage.py
